[package]
name = "oondl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arboard = {version ="3.4.0", features = ["wayland-data-control"]}
const_format = "0.2.32"
directories = "5.0.1"
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow" , "persistence"] }
egui = "0.27.2"
egui_file = "0.17.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
permissions = "0.5.1"
regex = "1.10.4"
reqwest = {version ="0.12.4", features = ["stream"]}
roxmltree = "0.20.0"
sanitise-file-name = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
single-instance = "0.3.3"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = {version = "1.38.0", features = ["full"]}
tokio-util = "0.7.11"
url = "2.5.0"


[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"]}
